# simd_set_operations

./: .gitignore  Cargo.toml  README.md  config.toml  experiment.toml  fetch_webdocs.bash  generate.toml  plot.ipynb  u32_1Mi_sample_5set.toml
.github/workflows/: rust.yml
benches/: bench_intersect.rs
benches/benchlib/: mod.rs
benches/framework/: mod.rs
benchmark/: Cargo.toml
benchmark/src/: algorithms.rs  datafile.rs  format.rs  generators.rs  harness.rs  lib.rs  rdtscp.rs  realdata.rs  schema.rs  timer.rs  tsc.rs  util.rs  webdocs.rs
benchmark/src/timer/: harness.rs  perf.rs
benchmarks/: Cargo.toml
benchmarks/benches/: bench_intersect.rs
benchmarks/src/: generators.rs  lib.rs  schema.rs  twoset.rs
config/: experiment.toml  experiment.toml.bak  test_pair.toml  test_sample.toml  u32_1Mi_pair.toml
scripts/: bench_all.sh  compare.py  kernel.py  outliers.py  plot.py  plot_all.bash  plot_all.sh  process_graph.py  process_roaring_all.sh  requirements.txt  results_frequency_graph.py  statistics.py  summary.py
scripts/codegen/: compare.py  fesia_kernel.py  mono.py
scripts/paper/: bench-cmp.sh  bench.sh  best-compare.sh  best.sh  mca.sh  plot.sh  process.sh  show.sh
scripts/paper/misc/: best-alg.sh  rename-process.sh
scripts/paper/qfilter/: plot.py  process.sh
scripts/realdata/: fetch_graphs.bash  fetch_roaring.sh  process_roaring.py
scripts/results/: asm.sh  best skew.py  best.py  compare.py  label.py  plot.py  process.py
setops/: Cargo.toml  build.rs
setops/ffi/qfilter/: qfilter.cpp  qfilter.h
setops/src/: bsr.rs  instructions.rs  intersect.rs  lib.rs  roaring.rs  util.rs  visitor.rs
setops/src/intersect/: .broadcast.rs.swp  adaptive.rs  avx512.rs  bmiss.rs  broadcast.rs  fesia.rs  galloping.rs  lbk.rs  merge.rs  mono.rs  qfilter.rs  qfilter_c.rs  shuffling.rs  simd_galloping.rs  simd_shuffling.rs  svs.rs
setops/src/intersect/fesia/: kernels.rs  kernels_avx2.rs  kernels_avx512.rs  kernels_sse.rs
setops/tests/: property_tests.rs  unit_tests.rs
setops/tests/testlib/: mod.rs  properties.rs
src/: bsr.rs  instructions.rs  intersect.rs  lib.rs  simd.rs  visitor.rs
src/intersect/: adaptive.rs  avx512.rs  bmiss.rs  fesia.rs  galloping.rs  merge.rs  qfilter.rs  search.rs  simd_galloping.rs  simd_shuffling.rs  std_set.rs  svs.rs
tests/: example.rs  intersect_examples.rs  intersect_properties.rs  property_tests.rs  test_intersect.rs  unit_tests.rs
tests/framework/: mod.rs
tests/testlib/: mod.rs  properties.rs
