[workspace]
members = ["setops", "benchmark"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/UNSW-database/simd_set_operations"

[profile.release]
lto = true
panic = "abort"

[profile.release-debug]
inherits = "release"
debug = true

[profile.release-lto]
inherits = "release"
lto = true
