[workspace]
members = ["setops", "benchmark"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/UNSW-database/simd_set_operations"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev-opt]
inherits = "dev"
opt-level = 1
lto = true
codegen-units = 1
debug = true
debug-assertions = true
