[package]
name = "benchmark"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
ciborium = "0.2"
clap = { version = "4.3", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.7" }
setops = { path = "../setops" }
roaring = { version = "0.10", features = ["simd"] }
colored = "2.0"
plotters = "0.3.5"

[features]
default = ["simd"]
simd = []

[[bin]]
name = "generate"
test = false
bench = false
