[package]
name = "benchmark"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.3", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.7" }
setops = { path = "../setops" }
# roaring = { version = "0.10", features = ["simd"] }
colored = "2.0"
# plotters = "0.3.5"
html-builder = "0.5.1"
num = "0.4.0"
rayon = "1.7"
indicatif = { version = "0.17", features = ["rayon"] }
croaring = "0.9.0"

[target.'cfg(target_os = "linux")'.dependencies]
perf-event2 = "0.7"

[features]
default = ["simd"]
simd = []

[[bin]]
name = "generate"
test = false
bench = false
