[package]
name = "benchmark"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.3", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
rand_pcg = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.7" }
setops = { path = "../setops" }
# roaring = { version = "0.10", features = ["simd"] }
colored = "2.0"
# plotters = "0.3.5"
html-builder = "0.5.1"
num = "0.4.0"
rayon = "1.7"
indicatif = { version = "0.17", features = ["rayon"] }
croaring = "0.9.0"
phf = { version = "0.11", features = ["macros"] }
paste = "1.0"
zipf = "7.0"

[features]
default = ["simd"]
simd = []

[[bin]]
name = "generate"

[[bin]]
name = "describe"

[[bin]]
name = "datatest"

[[bin]]
name = "statistics"

[[bin]]
name = "microbench"
