[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.7" }

[dev-dependencies]
setops = { path = "../setops" }
criterion = "0.3"
roaring = { version = "0.10.1", features = ["simd"] }

[features]
default = ["simd"]
simd = []

[[bench]]
name = "bench_intersect"
harness = false

[[bin]]
name = "generate"
test = false
bench = false
